docs(backend): add swagger documentation to Device
